# DocumentationEngine

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: adoption-finding.yml  config.yml  core-bug.yml  docs-pattern-request.yml  runtime-report.yml
.github/workflows/: ci.yml  release.yml
docs/: README.md  adopter-reporting.md  adoption.md  agent-contract.md  architecture.md  client-integration.md  context-delivery.md  context-efficiency.md  delivery-traceability.md  document-profiles.md  execution-admission.md  execution-handoff.md  federation.md  graph-health.md  idea-intake.md  knowledge-promotion.md  local-state-safety.md  mcp-adapter.md  metadata-inventory.md  paradigmarium-integration.md  program-plans.md  releasing.md  setup-guide.md  workspace-sources.md  workstream-branching.md  workstream-evidence.md  workstream-lifecycle.md
examples/: execution-admission-request.json  execution-result.json  idea-intake-request.json  workstream-branch-template.md  workstream-record.json
examples/generic-adopter/: .docsystem.toml  README.md
examples/generic-adopter/plan/: README.md  design.md  review.md
examples/generic-adopter/plan/templates/: document-template.md
examples/paradigmarium-profile/: .docsystem.toml  README.md
examples/paradigmarium-profile/plan/: README.md
examples/paradigmarium-profile/plan/architecture/: README.md
examples/paradigmarium-profile/plan/decisions/: README.md
scripts/: installed_cli_smoke.sh
src/docsystem/: __init__.py  __main__.py  admission.py  catalog.py  change_plan.py  cli.py  config.py  delivery.py  execution.py  federated_projection.py  federation.py  graph.py  health.py  intake.py  inventory.py  journal.py  lifecycle.py  maintenance.py  mcp_server.py  metadata.py  migration.py  profiles.py  program_plan.py  projection.py  promotion.py  readiness.py  sections.py  shared_finish.py  workspace.py  workstream.py
tests/: test_admission.py  test_catalog.py  test_change_plan.py  test_change_plan_cli.py  test_cli.py  test_cli_platform.py  test_config.py  test_context_cli.py  test_delivery.py  test_execution_handoff.py  test_federated_projection.py  test_federated_write.py  test_federation.py  test_graph.py  test_health.py  test_intake.py  test_inventory.py  test_journal.py  test_lifecycle.py  test_maintenance.py  test_mcp_adapter.py  test_metadata.py  test_migration.py  test_profiles.py  test_program_plan.py  test_promotion.py  test_readiness.py  test_references_cli.py  test_release_workflows.py  test_sections.py  test_vertical.py  test_workspace.py  test_workstream.py
