[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docsystem"
version = "0.1.0"
description = "Provider-neutral structured Markdown documentation engine."
requires-python = ">=3.12"
dependencies = [
    "PyYAML>=6,<7",
]

[project.optional-dependencies]
mcp = ["mcp>=1.2,<2"]

[project.scripts]
docsystem = "docsystem.cli:main"
docsystem-mcp = "docsystem.mcp_server:main"

[dependency-groups]
dev = [
    "mcp>=1.2,<2",
    "pytest>=9,<10",
    "ruff>=0.14,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/docsystem"]

[tool.pytest.ini_options]
addopts = ["--strict-config", "--strict-markers"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
